// Vitest Snapshot v1

exports[`<Settings /> > should render when [props.loading=%p] false 1`] = `
<styled.div>
  <ViewHeader
    title="Administration"
  >
    <styled.h1>
      Administration
    </styled.h1>
  </ViewHeader>
  <styled.nav
    bsStyle="tabs"
  >
    <Styled(NavLink)
      to="/administration/settings"
    >
      Settings
    </Styled(NavLink)>
    <Styled(NavLink)
      to="/administration/users"
    >
      Users
    </Styled(NavLink)>
    <Styled(NavLink)
      to="/administration/groups"
    >
      Groups
    </Styled(NavLink)>
  </styled.nav>
  <styled.div>
    <Switch>
      <Redirect
        exact={true}
        from="/administration"
        to="/administration/settings"
      />
      <Route
        component={[Function]}
        path="/administration/settings"
      />
      <Route
        component={
          {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        exact={true}
        path="/administration/users"
      />
      <Route
        component={
          {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        path="/administration/users/:userId"
      />
      <Route
        component={
          {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        path="/administration/groups"
      />
    </Switch>
  </styled.div>
</styled.div>
`;

exports[`<Settings /> > should render when [props.loading=%p] true 1`] = `
<styled.div>
  <ViewHeader
    title="Administration"
  >
    <styled.h1>
      Administration
    </styled.h1>
  </ViewHeader>
  <styled.nav
    bsStyle="tabs"
  >
    <Styled(NavLink)
      to="/administration/settings"
    >
      Settings
    </Styled(NavLink)>
    <Styled(NavLink)
      to="/administration/users"
    >
      Users
    </Styled(NavLink)>
    <Styled(NavLink)
      to="/administration/groups"
    >
      Groups
    </Styled(NavLink)>
  </styled.nav>
  <styled.div>
    <LoadingPlaceholder />
  </styled.div>
</styled.div>
`;
